Add sending an email for new registered users

--- a/example.env
+++ b/example.env
@@ -19,3 +19,9 @@ REFRESH_TOKEN_PUBLIC_KEY=LS0tLS1CRUdJTiBQVUJMSUMgS0VZLS0tLS0KTUlHZk1BMEdDU3FHU0l
 
 REFRESH_TOKEN_EXPIRED_IN=60m
 REFRESH_TOKEN_MAXAGE=60
+
+EMAIL_FROM=admin@admin.com
+SMTP_HOST=smtp.mailtrap.io
+SMTP_USER=474944ff9f466c
+SMTP_PASSWORD=37328d894f83f5
+SMTP_PORT=587
