--- a/example.env
+++ b/example.env
@@ -1,5 +1,4 @@
 PORT=8080
-
 GRPC_SERVER_ADDRESS=0.0.0.0:8081
 
 MONGO_INITDB_ROOT_USERNAME=root
@@ -27,3 +26,9 @@ SMTP_HOST=smtp.mailtrap.io
 SMTP_USER=474944ff9f466c
 SMTP_PASSWORD=37328d894f83f5
 SMTP_PORT=587
+
+USER_EMAIL_TEMPLATE_PATH=internal/user/data/repository/external/mail/template
+USER_EMAIL_TEMPLATE_NAME=verificationCode.html
+
+CLIENT_ORIGIN_URL=http://localhost:8080/api/
+
