--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mongo
     container_name: mongodb
     restart: always
-    env_file: ./app.env
+    env_file: ./config/yaml/application.yaml
     ports:
       - '27017:27017'
     volumes:
