--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,5 @@ logs.txt
 secret.md
 /temp
 temp/
-config/yaml/v1/dev.application.yaml
+config/yaml/v1/docker.dev.application.yaml
+config/yaml/v1/local.dev.application.yaml
