--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   app:
     build:
       context: ./
-      dockerfile: infrastructure/Docker/Dockerfile.prod
+      dockerfile: infrastructure/Docker/Dockerfile.dev
     image: app
     ports:
       - "8080:8080"
