--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ logs.txt
 secret.md
 /temp
 temp/
-config/yaml/v1/docker.dev.application.yaml
-config/yaml/v1/local.application.yaml
+
 config/yaml/v1/test.application.yaml
+config/yaml/v1/local.application.yaml
+config/yaml/v1/docker.dev.application.yaml
+config/yaml/v1/docker.staging.application.yaml
+config/yaml/v1/docker.prod.application.yaml
