--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,15 +36,13 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - ENV=dev
-    volumes:
-      - ./:/app-production
-    working_dir: /app-production
+      - ENV=prod
+    working_dir: /app
     depends_on:
       - mongodb
     networks:
       - application-network
-    command: go run ./cmd/server/main.go 
+    command: ./main 
 
 networks:
   application-network:
