--- a/infrastructure/docker/Dockerfile.prod
+++ b/infrastructure/docker/Dockerfile.prod
@@ -1,32 +1,35 @@
-# Stage 1: Build the Go application
+# Stage 1: Build the Go application.
 FROM golang:alpine AS builder
 
-# Set the Current Working Directory inside the container
+# Set the Current Working Directory inside the container.
 WORKDIR /app
 
-# Copy go.mod and go.sum files
+# Copy go.mod and go.sum files.
 COPY go.mod go.sum ./
 
-# Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
+# Download all dependencies.
 RUN go mod download
 
-# Copy the source code into the container
+# Copy the source code into the container.
 COPY . .
 
-# Build the Go application
+# Build the Go application.
 RUN go build -o main ./cmd/server/main.go
 
-# Stage 2: Run the Go application
+# Stage 2: Run the Go application.
 FROM alpine:latest
 
-# Set the Current Working Directory inside the container
+# Set the Current Working Directory inside the container.
 WORKDIR /app
 
-# Copy the built executable from the builder stage
+# Copy the compiled binary from the builder stage.
 COPY --from=builder /app/main .
 
-# Expose port 8080 to the outside world
+# Copy the configuration directory.
+COPY config /app/config
+
+# Expose port 8080 to the outside world.
 EXPOSE 8080
 
-# Command to run the executable
+# Command to run the executable.
 CMD ["./main"]
