--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - '27017:27017'
     volumes:
       - mongodbDATA:/data/db
+      - ./infrastructure/script/data/repository/mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js
     networks:
       - application-network
 
