--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ config/yaml/v1/local.application.yaml
 config/yaml/v1/docker.dev.application.yaml
 config/yaml/v1/docker.staging.application.yaml
 config/yaml/v1/docker.prod.application.yaml
+
+infrastructure/script/data/repository/mongo/init-mongo.js
+infrastructure/script/data/repository/mongo/init-test-data-mongo.js
