--- a/infrastructure/deployment/docker/Dockerfile.dev
+++ b/infrastructure/deployment/docker/Dockerfile.dev
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY go.mod go.sum ./
 
 # Download all dependencies.
-RUN go mod tidy && go mod download && go mod verify
+RUN go mod download
 
 # Copy the source code into the container.
 COPY . .
