--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,11 @@ services:
       - application-network
     command: reflex -r '\.go$' -s -- go run ./cmd/server/main.go
 
-  app-staging:
+  app-release:
     build:
       context: ./
-      dockerfile: infrastructure/deployment/docker/Dockerfile.staging
-    image: app-staging
+      dockerfile: infrastructure/deployment/docker/Dockerfile.release
+    image: app-release
     ports:
       - "8080:8080"
     working_dir: /app
