--- a/infrastructure/deployment/docker/Dockerfile.local
+++ b/infrastructure/deployment/docker/Dockerfile.local
@@ -13,23 +13,26 @@ RUN go mod download
 # Copy the source code into the container.
 COPY . .
 
-# Build the Go application statically.
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o main ./cmd/server/main.go
+# Build the Go application.
+RUN go build -o main ./cmd/server/main.go
 
-# Stage 2: Run the Go application using scratch.
-FROM scratch
+# Stage 2: Run the Go application.
+FROM golang:alpine
 
 # Set the Current Working Directory inside the container.
 WORKDIR /app
 
-# Copy the compiled binary from the builder stage.
+# Install reflex for live reloading.
+RUN go install github.com/cespare/reflex@latest
+
+# Copy the source code from the builder stage.
 COPY --from=builder /app/main .
 
-# Copy the configuration directory.
-COPY --from=builder /app/config /app/config
+# Also copy the source code for live reloading.
+COPY . .
 
 # Expose port 8080 to the outside world.
 EXPOSE 8080
 
-# Command to run the executable.
-CMD ["./main"]
+# Command to run the executable with reflex.
+CMD ["reflex", "-r", '\\.go$', "-s", "--", "go", "run", "./cmd/server/main.go"]
