--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,28 @@
-name: CI for Main (Production) Branch
+name: Main
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "master" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "master" ]
 
 jobs:
-  test-and-build:
+
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      # Set up Go with the latest stable version
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 'stable'
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23.3'
 
-      # Run unit tests for each commit (common step)
-      - name: Run Unit Tests
-        run: go test ./test/unit/...
+    - name: Build and Run Production Services
+      run: docker compose up mongodb app-production -d
 
-      # Build and run Docker services for the main branch
-      - name: Build and Run Production Services
-        run: docker compose up mongodb app-production -d
+    - name: Build
+      run: go build -v ./...
 
-      # Clean up Docker containers
-      - name: Clean Up Docker
-        run: docker compose down -v
+    - name: Test
+      run: go test -v ./...
