--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
-name: Main (Production)
+name: Release (pre-Production)
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "release" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "release" ]
 
 jobs:
 
@@ -21,8 +21,8 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Build and Run Production Services
-      run: docker compose up mongodb app-production -d
+    - name: Build and Run Release Services
+      run: docker compose up mongodb app-release -d
 
     # Clean up Docker containers
     - name: Clean Up Docker
