--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    # Cache Go Modules
+    # Cache Go Modules.
     - name: Cache Go modules
       uses: actions/cache@v3
       with:
@@ -27,11 +27,12 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.23.3'
+        cache:true
 
     - name: Test
       run: go test -v ./...
 
-    # Cache Docker layers (optional)
+    # Cache Docker layers (optional).
     - name: Cache Docker layers
       uses: actions/cache@v3
       with:
@@ -43,6 +44,6 @@ jobs:
     - name: Build and Run Production Services
       run: docker compose up mongodb app-production -d
 
-    # Clean up Docker containers
+    # Clean up Docker containers.
     - name: Clean Up Docker
       run: docker compose down -v
