--- a/.github/workflows/any.yml
+++ b/.github/workflows/any.yml
@@ -33,7 +33,6 @@ jobs:
       with:
         go-version: '1.23.3'
 
-
     - name: Build and Run Develop Services
       run: docker compose up mongodb app-dev -d
 
@@ -50,7 +49,7 @@ jobs:
         go-version: '1.23.3'
 
     - name: Test
-      run: go test ./test/integration/...
+      # run: go test ./test/integration/...
 
     - name: Build and Run Release Services
       run: docker compose up mongodb app-release -d
@@ -68,7 +67,7 @@ jobs:
         go-version: '1.23.3'
 
     - name: Test
-      run: go test ./test/integration/...
+      # run: go test ./test/integration/...
 
     - name: Build and Run Production Services
       run: docker compose up mongodb app-production -d
