--- a/.github/workflows/any.yml
+++ b/.github/workflows/any.yml
@@ -88,3 +88,25 @@ jobs:
 
     # - name: Integration tests
       # run: go test ./test/integration/...
+
+  auto-merge:
+    if: github.event.pull_request.merged == true && github.event.pull_request.user.login == 'yachnytskyi'
+    runs-on: ubuntu-latest
+    needs: [develop, release, production]  
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Git configuration
+      run: |
+        git config --global user.name 'GitHub Actions'
+        git config --global user.email 'actions@github.com'
+
+    - name: Merge PR after approval
+      run: |
+        # Get the target branch dynamically
+        TARGET_BRANCH="${{ github.base_ref }}"
+        git fetch origin ${{ github.head_ref }}
+        git checkout ${{ github.head_ref }}
+        git merge origin/${TARGET_BRANCH} --no-ff --commit -m "Auto merge PR"
+        git push origin HEAD:${TARGET_BRANCH}
