--- a/.github/workflows/any.yml
+++ b/.github/workflows/any.yml
@@ -1,8 +1,6 @@
-name: Github Workflow
-
 on:
   push:
-    branches: ['**']  
+    branches: ['**']
   pull_request:
     branches: ['**']  
 
@@ -32,6 +30,12 @@ jobs:
       with:
         go-version: '1.23.3'
 
+    - name: Cache Docker Images
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-docker-${{ github.sha }}
+
     - name: Build and Run Develop Services
       run: docker compose up mongodb app-dev -d
 
@@ -47,15 +51,18 @@ jobs:
       with:
         go-version: '1.23.3'
 
+    - name: Cache Docker Images
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-docker-${{ github.sha }}
+
     - name: Build and Run Release Services
       run: docker compose up mongodb app-release -d
 
-    # - name: Integration tests
-    #   run: go test ./test/integration/...
-
-  # Production services (only for main branch)
+  # Production services (for both main branch and PRs targeting main)
   production:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request' && github.base_ref == 'main'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -65,16 +72,19 @@ jobs:
       with:
         go-version: '1.23.3'
 
+    - name: Cache Docker Images
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-docker-${{ github.sha }}
+
     - name: Build and Run Production Services
       run: docker compose up mongodb app-production -d
-
-    # - name: Integration tests
-      # run: go test ./test/integration/...
 
   auto-merge:
     if: github.event.pull_request.merged == true && github.event.pull_request.user.login == 'yachnytskyi'
     runs-on: ubuntu-latest
-    needs: [develop, release, production]  
+    needs: [develop, release, production]
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
