--- a/.github/workflows/any.yml
+++ b/.github/workflows/any.yml
@@ -20,7 +20,7 @@ jobs:
 
   # Develop services (only for dev branch)
   develop:
-    if: github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/dev' || (github.event_name == 'pull_request' && github.base_ref == 'dev')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -29,19 +29,13 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: '1.23.3'
-
-    - name: Cache Docker Images
-      uses: actions/cache@v3
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-docker-${{ github.sha }}
 
     - name: Build and Run Develop Services
       run: docker compose up mongodb app-dev -d
 
   # Release services (only for release branch)
   release:
-    if: github.ref == 'refs/heads/release'
+    if: github.ref == 'refs/heads/release' || (github.event_name == 'pull_request' && github.base_ref == 'release')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -51,11 +45,6 @@ jobs:
       with:
         go-version: '1.23.3'
 
-    - name: Cache Docker Images
-      uses: actions/cache@v3
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-docker-${{ github.sha }}
 
     - name: Build and Run Release Services
       run: docker compose up mongodb app-release -d
@@ -72,11 +61,6 @@ jobs:
       with:
         go-version: '1.23.3'
 
-    - name: Cache Docker Images
-      uses: actions/cache@v3
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-docker-${{ github.sha }}
 
     - name: Build and Run Production Services
       run: docker compose up mongodb app-production -d
