--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -3,13 +3,14 @@ name: Auto Merge PRs
 on:
   pull_request_review:
     types: [submitted]
+  pull_request:
+    types: [closed]
 
 jobs:
   auto-merge:
     if: |
-      github.event.review.state == 'approved' && 
-      github.event.pull_request.user.login == 'yachnytskyi' && 
-      github.event.pull_request.merged == false
+      (github.event_name == 'pull_request_review' && github.event.review.state == 'approved' && github.event.pull_request.user.login == 'yachnytskyi') || 
+      (github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.event.pull_request.user.login == 'yachnytskyi')
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
