--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -16,14 +16,10 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23.3'
+        go-version: stable
 
     - name: Test
       run: go test -v ./...
 
     - name: Build and Run Develop Services
       run: docker compose up mongodb app-dev -d
-
-    # Clean up Docker containers
-    - name: Clean Up Docker
-      run: docker compose down -v
