--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.23.3'
+        go-version: stable
 
     - name: Build and Run Production Services
       run: docker compose up mongodb app-production -d
