--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: General Build and Unit Tests/Linter
+name: General Build and Unit Tests
 
 on:
   pull_request:
@@ -13,7 +13,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.23.3'
+        go-version: stable
 
     - name: Unit tests
       run: go test ./test/unit/...
