--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,5 +21,5 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Build and Run Release Services
+    - name: Build and Run Release
       run: docker compose up mongodb app-release -d
