--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
 name: General Build and Unit Tests
 
 on:
-  pull_request:
     branches: ['**']
+  # pull_request:
+    # branches: ['**']
 
 jobs:
   build:
