--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,13 +1,13 @@
 name: golangci-lint
 on:
-  # push:
-    # branches: ['**']
-  pull_request:
+  push:
+    branches: ['**']
+  # pull_request:
 
 permissions:
   contents: read
   # Optional: allow read access to pull request. Use with `only-new-issues` option.
-  pull-requests: read
+  # pull-requests: read
 
 jobs:
   golangci:
