--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,10 @@
 name: General Build and Unit Tests
 
 on:
-    branches: ['**']
+  push:
+    branches: ['**']  
   # pull_request:
-    # branches: ['**']
+    # branches: ['**'] 
 
 jobs:
   build:
