--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ temp/
 
 config/yaml/v1/test.application.yaml
 config/yaml/v1/local.application.yaml
-config/yaml/v1/docker.dev.application.yaml
+config/yaml/v1/docker.develop.application.yaml
 config/yaml/v1/docker.release.application.yaml
 config/yaml/v1/docker.prod.application.yaml
 
