--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ config/yaml/v1/test.application.yaml
 config/yaml/v1/local.application.yaml
 config/yaml/v1/docker.develop.application.yaml
 config/yaml/v1/docker.release.application.yaml
-config/yaml/v1/docker.prod.application.yaml
+config/yaml/v1/docker.production.application.yaml
 
 infrastructure/script/data/repository/mongo/init-mongo.js
 infrastructure/script/data/repository/mongo/init-test-data-mongo.js
