--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Release (pre-Production)
 
 on:
-  push:
-    branches: [ "release" ]
+  # push:
+    # branches: [ "release" ]
   pull_request:
     branches: [ "release" ]
 
