--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,33 +1,14 @@
-name: Auto Merge PR when checks pass
-
+name: Auto-Merge
 on:
   pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
-    branches:
-      - '**'  # Trigger on any branch
+    types: [opened, ready_for_review]
 
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v3
-
-      - name: Wait for checks to pass
+      - name: Auto-Merge the PR
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "Waiting for checks to pass..."
-          PR_STATUS=$(gh pr view ${{ github.event.pull_request.number }} --json checksStatus -q ".checksStatus")
-          while [[ "$PR_STATUS" != "success" ]]; do
-            echo "Waiting for checks to complete..."
-            sleep 10
-            PR_STATUS=$(gh pr view ${{ github.event.pull_request.number }} --json checksStatus -q ".checksStatus")
-          done
-          
-      - name: Merge PR
-        if: success()
-        run: |
-          gh pr merge ${{ github.event.pull_request.number }} --merge --admin
+          gh pr merge ${{ github.event.pull_request.number }} --auto
