--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,4 +1,4 @@
-name: Auto Merge
+name: Auto Merge workflow
 
 on:
   pull_request:
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3  # Ensures the repository is cloned and accessible
+        uses: actions/checkout@v3  
 
       - name: Merge Pull Request
         if: success()
