--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -15,6 +15,6 @@ jobs:
 
       - name: Merge Pull Request
         if: success()
-        run: gh pr merge ${{ github.event.pull_request.number }} --merge
+        run: gh pr merge ${{ github.event.pull_request.number }} --merge --auto
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
