--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,4 +1,4 @@
-name: Auto Merge workflow test
+name: Auto Merge workflow
 
 on:
   pull_request:
@@ -13,6 +13,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3  
 
+      - name: Wait for checks to pass
+        run: |
+          PR_STATUS=$(gh pr view ${{ github.event.pull_request.number }} --json status -q '.status')
+          while [[ "$PR_STATUS" != "SUCCESS" && "$PR_STATUS" != "ERROR" && "$PR_STATUS" != "FAILURE" ]]; do
+            echo "Waiting for checks to pass..."
+            sleep 10
+            PR_STATUS=$(gh pr view ${{ github.event.pull_request.number }} --json status -q '.status')
+          done
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          
       - name: Merge Pull Request
         if: success()
         run: gh pr merge ${{ github.event.pull_request.number }} --merge --auto
